[gd_scene load_steps=5 format=3 uid="uid://1ig2x84fpixo"]

[ext_resource type="Script" uid="uid://cffrenflp45f3" path="res://ui/scripts/hud.gd" id="1_276te"]
[ext_resource type="Theme" uid="uid://dxyu51du6xt8k" path="res://resources/ui/menu_theme.tres" id="1_rbyyf"]
[ext_resource type="PackedScene" uid="uid://c42b4ts0st5ur" path="res://ui/ammo_counter.tscn" id="3_546lt"]
[ext_resource type="PackedScene" uid="uid://b2gqkphule5ou" path="res://ui/weapon_panel.tscn" id="4_7ihmi"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_276te")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rbyyf")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Control/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Control/MarginContainer/Control/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/Control/VBoxContainer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HealthBar" type="ProgressBar" parent="Control/MarginContainer/Control/VBoxContainer2/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 100)
layout_mode = 2
step = 1.0
value = 80.0
fill_mode = 3
show_percentage = false

[node name="HBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/Control/VBoxContainer2/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HealthLabel" type="Label" parent="Control/MarginContainer/Control/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "80"
vertical_alignment = 1

[node name="SlashLabel" type="Label" parent="Control/MarginContainer/Control/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "/"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxLabel" type="Label" parent="Control/MarginContainer/Control/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="Control/MarginContainer/Control/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/Control/VBoxContainer2/PanelContainer2"]
layout_mode = 2

[node name="ScrapCount" parent="Control/MarginContainer/Control/VBoxContainer2/PanelContainer2/VBoxContainer" instance=ExtResource("3_546lt")]
unique_name_in_owner = true
layout_mode = 2

[node name="BulletCount" parent="Control/MarginContainer/Control/VBoxContainer2/PanelContainer2/VBoxContainer" instance=ExtResource("3_546lt")]
unique_name_in_owner = true
layout_mode = 2
type = 1

[node name="RocketCount" parent="Control/MarginContainer/Control/VBoxContainer2/PanelContainer2/VBoxContainer" instance=ExtResource("3_546lt")]
unique_name_in_owner = true
layout_mode = 2
type = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 144.0
grow_vertical = 2
alignment = 1

[node name="PrimaryPanel" parent="Control/MarginContainer/Control/VBoxContainer" instance=ExtResource("4_7ihmi")]
unique_name_in_owner = true
layout_mode = 2

[node name="SecondaryPanel" parent="Control/MarginContainer/Control/VBoxContainer" instance=ExtResource("4_7ihmi")]
unique_name_in_owner = true
layout_mode = 2
slot = 1

[node name="TertiaryPanel" parent="Control/MarginContainer/Control/VBoxContainer" instance=ExtResource("4_7ihmi")]
unique_name_in_owner = true
layout_mode = 2
slot = 2
